--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -8,19 +8,19 @@
     "source": "https://github.com/elsayed-elsadek/ecommerce"
   },
   {
-    "title": "Shopping Cart",
-    "imageSrc": "projects/shoppingcart.png",
-    "description": "A simple shopping cart application with essential features.",
-    "skills": ["html", "css", "Bootstrap", "JavaScript"],
-    "demo": " https://elsayed-elsadek.github.io/Shopping-Cart",
-    "source": " https://github.com/elsayed-elsadek/Shopping-Cart"
+    "title": "Admin Dashboard",
+    "imageSrc": "projects/dashboard.png",
+    "description": "Built a responsive admin dashboard for user management systems",
+    "skills": ["Bootstrap", "React" , "API"],
+    "demo": "https://admindashboard999.netlify.app/",
+    "source": " https://github.com/elsayed-elsadek/DashBoard"
   },
   {
-    "title": "YouTube Clone",
-    "imageSrc": "projects/youtube.png",
-    "description": "A YouTube-like app for exploring videos using an API.",
-    "skills": ["React", "Mui", "Api"],
-    "demo": "https://679841e1795fe20ddeca3f4d--shiny-creponne-54b6d7.netlify.app/",
-    "source": "https://github.com/elsayed-elsadek/Youtube-clone"
+    "title": "Landing Page",
+    "imageSrc": "projects/landing.png",
+    "description": "Landing Page for Photographer",
+    "skills": ["Html", "Bootstrap", "JavaScript" , "AOS"],
+    "demo": "https://ragnar-photography.netlify.app/",
+    "source": "https://github.com/elsayed-elsadek/photography"
   }
 ]
